[package]
name = "oxide_linux2"
version = "1.0.2" # Increment if already published
authors = ["Ben Santora <your_email@example.com>"]
edition = "2021"
description = "This Rust library has been deprecated - Nov 5 2024. See sysinfo_linux instead."
license = "MIT"
publish = true

[lib]
path = "src/lib.rs"
